# aoc_2024

./: Cargo.toml  README.md
inputs/: p.py
src/: lib.rs  main.rs
